[sc-2969] Search filter by label (#404)
* Search input improvements to allow filtering

 - Move Nuclia powered by on top of the field
 - Display magnifying glass icon on the left for popup search as well

* Add filter button to search input

  - Fix basic secondary button colors and adapt expanded tile background color accordingly
  - Fix icon button size (medium and small) and add xsmall size for Icon button used in Label
  - Remove padding from the customizable style
  - Prevent search field size to change depending on filter button presence or not

* Display filter button when filter feature is enabled

* Improve common and global style

  - Cleanup code analysis errors by removing custom options currently not in use. We will review the full customization policy of the widget later.
  - Manage unwanted focus outline globally instead of doing so by component

* Search filter dropdowns

  - add readable orderedLabelSetList in label state
  - create common dropdown component
  - display label set dropdown when clicking on the filter button
  - display label submenu when hovering a label set
  - close all dropdowns on label selection
  - highlight selected labels on the dropdown

* Update dropdown to add labels on paragraphs

  - Use the new Dropdown component in LabelMenu
  - Allow to remove labels directly from the paragraph without opening the dropdown
  - Remove the selected labels from the top of the dropdown
  - Highlight the selected labels in the dropdown consistently with the search by label dropdown

--- a/libs/search-widget/src/common/_global.scss
+++ b/libs/search-widget/src/common/_global.scss
@@ -25,3 +25,54 @@ mark[family] {
   white-space: nowrap;
   border: 0;
 }
+
+// Suppress the focus outline on elements that cannot be accessed via keyboard.
+// This prevents an unwanted focus outline from appearing around elements that
+// might still respond to pointer events.
+//
+// Credit: https://github.com/suitcss/base
+[tabindex='-1']:focus {
+  outline: 0 !important;
+}
+// remove the focus style when clicking on element
+:focus:not(:focus-visible) {
+  outline: none;
+}
+
+ul.sw-dropdown-options {
+  list-style: none;
+  margin: 0;
+  padding-left: 0;
+
+  li {
+    cursor: pointer;
+    line-height: var(--rhythm-5);
+    padding: 0 var(--rhythm-2);
+
+    &:hover {
+      background-color: var(--color-neutral-lightest);
+    }
+    &.selected {
+      background-color: var(--color-primary-lightest);
+    }
+  }
+}
+
+.sw-dropdown-options {
+  .label-set-option {
+    align-items: center;
+    display: flex;
+    flex-direction: row;
+    gap: var(--rhythm-1);
+    justify-content: space-between;
+
+    .label-set-title {
+      flex: 1 0 auto;
+    }
+    .label-set-color {
+      flex: 0 0 auto;
+      height: var(--rhythm-1);
+      width: var(--rhythm-1);
+    }
+  }
+}
