--- a/libs/search-widget/src/common/_global.scss
+++ b/libs/search-widget/src/common/_global.scss
@@ -39,11 +39,13 @@ mark[family] {
   outline: none;
 }
 
-ul.sw-dropdown-options {
+.sw-dropdown ul {
   list-style: none;
   margin: 0;
   padding-left: 0;
+}
 
+ul.sw-dropdown-options {
   li {
     cursor: pointer;
     line-height: var(--rhythm-5);
