[sc-3123] Update button theme
  - no more shadow on hover
  - darker hover and active state for primary and destructive buttons
  - update secondary basic buttons to be aligned with the others

--- a/apps/sistema-demo/src/app/sistema-pages/pastanaga-pages-override/sistema-buttons/sistema-buttons.component.html
+++ b/apps/sistema-demo/src/app/sistema-pages/pastanaga-pages-override/sistema-buttons/sistema-buttons.component.html
@@ -117,7 +117,7 @@
             Solid
           </pa-button>
         </div>
-        <div class="pa-buttons-block dashboard-background">
+        <div class="pa-buttons-block">
           <pa-button
             kind="secondary"
             aspect="basic"
