--- a/libs/sistema/theme/tokens/_buttons.tokens.scss
+++ b/libs/sistema/theme/tokens/_buttons.tokens.scss
@@ -18,13 +18,15 @@ $padding-button-icon-small: rhythm(1);
 $padding-button-icon-large: rhythm(1.5);
 
 // Shadows
+$shadow-button-solid-hover: none;
 $shadow-button-basic-hover: none;
 
 //---------------------------------------------------------------
 // PRIMARY
 //---------------------------------------------------------------
 
-$color-background-button-primary-solid-active: $color-primary-lighter;
+$color-background-button-primary-solid-hover: $color-primary-strong;
+$color-background-button-primary-solid-active: $color-primary-stronger;
 
 $color-text-button-primary-basic: $color-primary-regular;
 $color-text-button-primary-basic-hover: $color-primary-regular;
@@ -43,20 +45,19 @@ $color-background-button-secondary-solid-hover: $color-dark-stronger;
 $color-background-button-secondary-solid-active: $color-neutral-regular;
 
 // basic
-$color-background-button-secondary-basic-hover: $color-neutral-light;
-$color-background-button-secondary-basic-active: $color-neutral-regular;
+$color-background-button-secondary-basic-hover: $color-neutral-lightest;
 
 //---------------------------------------------------------------
 // DESTRUCTIVE
 //---------------------------------------------------------------
 // solid
 $color-text-button-destructive-solid: $color-dark-stronger;
-$color-text-button-destructive-solid-hover: $color-dark-stronger;
-$color-text-button-destructive-solid-active: $color-dark-stronger;
+$color-text-button-destructive-solid-hover: $color-light-stronger;
+$color-text-button-destructive-solid-active: $color-light-stronger;
 
 $color-background-button-destructive-solid: $color-secondary-regular;
-$color-background-button-destructive-solid-hover: $color-secondary-regular;
-$color-background-button-destructive-solid-active: $color-secondary-lighter;
+$color-background-button-destructive-solid-hover: $color-secondary-strong;
+$color-background-button-destructive-solid-active: $color-secondary-stronger;
 
 // basic
 $color-text-button-destructive-basic: $color-secondary-strong;
