rename stash-navbar into navbar

--- a/apps/dashboard/src/app/account/account.component.html
+++ b/apps/dashboard/src/app/account/account.component.html
@@ -10,7 +10,7 @@
   <ng-template
     #sidebarContent
     let-unfolded="unfolded">
-    <app-stash-navbar [isUnfolded]="unfolded"></app-stash-navbar>
+    <app-navbar [isUnfolded]="unfolded"></app-navbar>
   </ng-template>
 </stf-sidebar>
 
