--- a/apps/dashboard/src/app/components/navbar/navbar.component.html
+++ b/apps/dashboard/src/app/components/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <div
-  class="stash-navbar"
+  class="app-navbar"
   [class.is-unfolded]="isUnfolded">
   <div class="navbar-scroll-container">
     <div
