--- a/apps/dashboard/src/app/components/navbar/navbar.component.scss
+++ b/apps/dashboard/src/app/components/navbar/navbar.component.scss
@@ -4,7 +4,7 @@
 $height-breakpoint: 730px;
 
 :host,
-.stash-navbar {
+.app-navbar {
   height: 100%;
 }
 
@@ -87,7 +87,7 @@ $height-breakpoint: 730px;
   }
 }
 
-.stash-navbar:not(.is-unfolded) {
+.app-navbar:not(.is-unfolded) {
   .navbar-scroll-container {
     .navbar-content {
       padding-top: 0;
