--- a/libs/sistema/theme/tokens/_palette.tokens.scss
+++ b/libs/sistema/theme/tokens/_palette.tokens.scss
@@ -1,7 +1,7 @@
 // =================================================
 // PALETTE
 // =================================================
-$color-dark-stronger: hsl(0, 0%, 5%);
+$color-dark-stronger: #000;
 
 $color-light-stronger: #fff;
 
