--- a/apps/dashboard/src/app/account/account.component.html
+++ b/apps/dashboard/src/app/account/account.component.html
@@ -3,7 +3,7 @@
   name="main-sidebar"
   lockedOpen="gt-xs"
   [folded]="true"
-  [foldedWidth]="56"
+  [foldedWidth]="smallNavbar ? 40 : 56"
   [foldedAutoTriggerOnHover]="true"
   zIndex="900"
   zIndexBackdrop="850">
