--- a/apps/dashboard/src/app/components/navbar/navbar.component.html
+++ b/apps/dashboard/src/app/components/navbar/navbar.component.html
@@ -8,6 +8,16 @@
       <div class="nav-group">
         <div class="group-items">
           <a
+            [routerLink]="kbUrl"
+            class="nav-link"
+            routerLinkActive="active"
+            [routerLinkActiveOptions]="{ exact: true }">
+            <pa-icon name="home"></pa-icon>
+            <span class="nav-link-title">{{ 'stash.home' | translate }}</span>
+          </a>
+        </div>
+        <div class="group-items">
+          <a
             class="nav-link"
             [class.disabled]="!(isAdminOrContrib | async)"
             (click)="createNewLink()">
@@ -130,7 +140,7 @@
           </div>
         </ng-container>
       </div>
-      <div class="nav-group dark">
+      <div class="nav-group">
         <div class="group-items">
           <a
             [routerLink]="(accountUrl | async) + '/home'"
