--- a/libs/sistema/styles/_mixins.scss
+++ b/libs/sistema/styles/_mixins.scss
@@ -1,6 +1,6 @@
 @import '../../pastanaga-angular/projects/pastanaga-angular/src/styles/variables';
 
 @mixin dark-mode() {
-  background-color: lighten($color-dark-stronger, 13);
+  background-color: $color-dark-stronger;
   color: $color-light-stronger;
 }
