--- a/apps/dashboard/src/app/account/account-home/account-home.component.html
+++ b/apps/dashboard/src/app/account/account-home/account-home.component.html
@@ -19,7 +19,7 @@
 
       <section
         *ngIf="selectedTab.value === 'completed'"
-        class="container">
+        class="container chart-container">
         <div class="chart-header">
           <div class="chart-type-container">
             <span
