--- a/apps/dashboard/src/app/knowledge-box/knowledge-box-home/knowledge-box-home.component.scss
+++ b/apps/dashboard/src/app/knowledge-box/knowledge-box-home/knowledge-box-home.component.scss
@@ -23,7 +23,7 @@
 
   .container {
     padding: rhythm(3);
-    background-color: $color-light-stronger;
+    background-color: $color-neutral-lightest;
     border-radius: rhythm(0.5);
     margin-bottom: $flex-gap;
   }
