--- a/libs/sistema/theme/tokens/_tabs.tokens.scss
+++ b/libs/sistema/theme/tokens/_tabs.tokens.scss
@@ -4,8 +4,8 @@
 
 $color-text-tab-link: $color-dark-stronger;
 
-$color-background-tab-link: $color-neutral-lighter;
-$color-background-tab-link-active: $color-light-stronger;
+$color-background-tab-link: $color-light-stronger;
+$color-background-tab-link-active: $color-neutral-lightest;
 
 $font-size-tab-item: font-size(m);
 $font-weight-tab-item: $font-weight-regular;
