[sc-3125] Dock and background improvements (#410)
* rename stash-navbar into navbar

* Dock improvements

  - Update dock background to be color-neutral-lighter on home pages
  - Update the active indicator to be plain color
  - Update dock paddings to have all items displayed as square on hover
  - Add home button for kb pages
  - Fix sidebar to update the folded style when `foldedWidth` changes
  - Fix color-dark-stronger in the palette to be #000

* Dashboard improvements

  - White background by default on dashboard app
  - White side nav and neutral-background content on pages using `.section-navbar`
  - Neutral-lightest containers on kb home and account home pages
  - Update tabs theme to have active tab in neutral-lightest and other tabs in white

* Move section-navbar in dashboard app

It is used only there, and the last changes was breaking Desktop app

* Fix bad import

* Remove mediaQueryList event listener on destroy

--- a/apps/dashboard/src/app/components/navbar/navbar.component.html
+++ b/apps/dashboard/src/app/components/navbar/navbar.component.html
@@ -1,11 +1,21 @@
 <div
-  class="stash-navbar"
+  class="app-navbar"
   [class.is-unfolded]="isUnfolded">
   <div class="navbar-scroll-container">
     <div
       *ngIf="!(inAccount | async)"
       class="navbar-content">
       <div class="nav-group">
+        <div class="group-items">
+          <a
+            [routerLink]="kbUrl"
+            class="nav-link"
+            routerLinkActive="active"
+            [routerLinkActiveOptions]="{ exact: true }">
+            <pa-icon name="home"></pa-icon>
+            <span class="nav-link-title">{{ 'stash.home' | translate }}</span>
+          </a>
+        </div>
         <div class="group-items">
           <a
             class="nav-link"
@@ -130,7 +140,7 @@
           </div>
         </ng-container>
       </div>
-      <div class="nav-group dark">
+      <div class="nav-group">
         <div class="group-items">
           <a
             [routerLink]="(accountUrl | async) + '/home'"
