--- a/apps/dashboard/src/app/account/account.component.html
+++ b/apps/dashboard/src/app/account/account.component.html
@@ -3,14 +3,14 @@
   name="main-sidebar"
   lockedOpen="gt-xs"
   [folded]="true"
-  [foldedWidth]="56"
+  [foldedWidth]="smallNavbar ? 40 : 56"
   [foldedAutoTriggerOnHover]="true"
   zIndex="900"
   zIndexBackdrop="850">
   <ng-template
     #sidebarContent
     let-unfolded="unfolded">
-    <app-stash-navbar [isUnfolded]="unfolded"></app-stash-navbar>
+    <app-navbar [isUnfolded]="unfolded"></app-navbar>
   </ng-template>
 </stf-sidebar>
 
