--- a/libs/search-widget/src/common/common-style.scss
+++ b/libs/search-widget/src/common/common-style.scss
@@ -1,36 +1,36 @@
 .nuclia-widget {
   /* PALETTE */
-  --color-dark-stronger: var(--custom-color-dark-stronger, hsl(0, 0%, 5%));
-  --color-dark-stronger-rgb: 13, 13, 13;
-  --color-light-stronger: var(--custom-color-light-stronger, #fff);
+  --color-dark-stronger: #000;
+  --color-dark-stronger-rgb: 0, 0, 0;
+  --color-light-stronger: #fff;
 
-  --color-neutral-regular: var(--custom-color-neutral-strong, hsl(0, 0%, 44%));
-  --color-neutral-light: var(--custom-color-neutral-light, hsl(0, 0%, 77%));
-  --color-neutral-lighter: var(--custom-color-neutral-lighter, hsl(0, 0%, 90%));
-  --color-neutral-lightest: var(--custom-color-neutral-lightest, hsl(0, 0%, 94%));
+  --color-neutral-regular: hsl(0, 0%, 44%);
+  --color-neutral-light: hsl(0, 0%, 77%);
+  --color-neutral-lighter: hsl(0, 0%, 90%);
+  --color-neutral-lightest: hsl(0, 0%, 94%);
 
-  --color-neutral-background: var(--custom-color-neutral-background, hsl(240, 7%, 97%));
+  --color-neutral-background: hsl(240, 7%, 97%);
 
-  --color-primary-stronger: var(--custom-color-primary-stronger, hsl(336, 100%, 24%));
-  --color-primary-strong: var(--custom-color-primary-strong, hsl(336, 100%, 36%));
-  --color-primary-regular: var(--custom-color-primary-regular, hsl(336, 100%, 50%));
-  --color-primary-light: var(--custom-color-primary-light, hsl(336, 100%, 73%));
-  --color-primary-lighter: var(--custom-color-primary-lighter, hsl(336, 100%, 90%));
-  --color-primary-lightest: var(--custom-color-primary-lightest, hsl(336, 100%, 96%));
+  --color-primary-stronger: hsl(336, 100%, 24%);
+  --color-primary-strong: hsl(336, 100%, 36%);
+  --color-primary-regular: hsl(336, 100%, 50%);
+  --color-primary-light: hsl(336, 100%, 73%);
+  --color-primary-lighter: hsl(336, 100%, 90%);
+  --color-primary-lightest: hsl(336, 100%, 96%);
 
-  --color-secondary-stronger: var(--custom-color-secondary-stronger, hsl(51, 78%, 32%));
-  --color-secondary-strong: var(--custom-color-secondary-strong, hsl(51, 100%, 41%));
-  --color-secondary-regular: var(--custom-color-secondary-regular, hsl(51, 100%, 55%));
-  --color-secondary-light: var(--custom-color-secondary-light, hsl(51, 100%, 75%));
-  --color-secondary-lighter: var(--custom-color-secondary-lighter, hsl(51, 100%, 86%));
-  --color-secondary-lightest: var(--custom-color-secondary-lightest, hsl(51, 100%, 95%));
+  --color-secondary-stronger: hsl(51, 78%, 32%);
+  --color-secondary-strong: hsl(51, 100%, 41%);
+  --color-secondary-regular: hsl(51, 100%, 55%);
+  --color-secondary-light: hsl(51, 100%, 75%);
+  --color-secondary-lighter: hsl(51, 100%, 86%);
+  --color-secondary-lightest: hsl(51, 100%, 95%);
 
-  --color-tertiary-stronger: var(--custom-color-tertiary-stronger, hsl(249, 100%, 24%));
-  --color-tertiary-strong: var(--custom-color-tertiary-strong, hsl(249, 100%, 40%));
-  --color-tertiary-regular: var(--custom-color-tertiary-regular, hsl(249, 100%, 50%));
-  --color-tertiary-light: var(--custom-color-tertiary-light, hsl(249, 100%, 65%));
-  --color-tertiary-lighter: var(--custom-color-tertiary-lighter, hsl(249, 100%, 92%));
-  --color-tertiary-lightest: var(--custom-color-tertiary-lightest, hsl(249, 100%, 96%));
+  --color-tertiary-stronger: hsl(249, 100%, 24%);
+  --color-tertiary-strong: hsl(249, 100%, 40%);
+  --color-tertiary-regular: hsl(249, 100%, 50%);
+  --color-tertiary-light: hsl(249, 100%, 65%);
+  --color-tertiary-lighter: hsl(249, 100%, 92%);
+  --color-tertiary-lightest: hsl(249, 100%, 96%);
 
   /* SPACING */
   --spacer: 8px; /* 1unit - 8px */
@@ -67,12 +67,12 @@
   --rhythm-64: calc(var(--spacer) * 64); /*  64   unit - 512px */
 
   /* TYPOGRAPHY */
-  --font-size-base: var(--custom-font-size-base, 16px);
+  --font-size-base: 16px;
   --font-size-small: 13px;
   --font-size-xsmall: 12px;
-  --font-weight-body: var(--custom-font-weight-body, 300);
-  --font-weight-semi-bold: var(--custom-font-weight-semi-bold, 500);
-  --font-weight-bold: var(--custom-font-weight-semi-bold, 700);
+  --font-weight-body: 300;
+  --font-weight-semi-bold: 500;
+  --font-weight-bold: 700;
   --font-family-body: 'Source Sans Pro', sans-serif;
   --font-size-title-m-mobile: calc(var(--font-size-base) * 1.125);
   --font-size-title-m: calc(var(--font-size-base) * 1.25);
@@ -89,47 +89,47 @@
   --transition-slow: 0.8s cubic-bezier(0.6, 0, 0.4, 1);
 
   /* TOKEN */
-  --border-radius: var(--custom-border-radius, var(--rhythm-0_25));
+  --border-radius: var(--rhythm-0_25);
 
-  --color-backdrop: var(--custom-color-backdrop, rgba(var(--color-dark-stronger-rgb), 0.5));
-  --z-index-modal: var(--custom-z-index-modal, 10010);
-  --z-index-modal-backdrop: var(--custom-z-index-modal-backdrop, 10000);
+  --color-backdrop: rgba(var(--color-dark-stronger-rgb), 0.5);
+  --z-index-modal: 10010;
+  --z-index-modal-backdrop: 10000;
 
   --shadow-modal: var(--rhythm-0_25) var(--rhythm-0_25) var(--rhythm-2) rgba(var(--color-dark-stronger-rgb), 0.2);
 
-  --color-scrollbar-track: var(--custom-color-scrollbar-track, var(--color-light-stronger));
-  --color-scrollbar-thumb: var(--custom-color-scrollbar-thumb, var(--color-dark-stronger));
+  --color-scrollbar-track: var(--color-light-stronger);
+  --color-scrollbar-thumb: var(--color-dark-stronger);
 
   --focus-shadow: inset 0 0 0 var(--rhythm-0_25) var(--color-primary-lighter);
   --shadow-small: 1px 1px 2px rgba(var(--color-dark-stronger-rgb), 0.3);
 
-  --form-widget-padding: var(--custom-form-widget-padding, var(--default-search-field-padding));
-  --form-widget-border-width: var(--custom-form-widget-border-width, 1px);
-  --form-widget-border-style: var(--custom-form-widget-border-style, solid);
-  --form-widget-border-style-stronger: var(--custom-form-widget-border-style-stronger, solid);
-  --form-widget-border-color: var(--custom-form-widget-border-color, var(--color-neutral-regular));
-  --form-widget-border-radius: var(--custom-form-widget-border-radius, 0);
-  --form-widget-placeholder-color: var(--custom-form-widget-placeholder-color, --color-neutral-regular);
+  --form-widget-padding: var(--default-search-field-padding);
+  --form-widget-border-width: 1px;
+  --form-widget-border-style: solid;
+  --form-widget-border-style-stronger: solid;
+  --form-widget-border-color: var(--color-neutral-regular);
+  --form-widget-border-radius: 0;
+  --form-widget-placeholder-color: var(--color-neutral-regular);
 
   --input-widget-border-width: 0 0 1px 0;
-  --input-widget-border-style: var(--custom-input-widget-border-style, solid);
-  --input-widget-border-style-stronger: var(--custom-input-widget-border-style-stronger, solid);
-  --input-widget-border-color: var(--custom-input-widget-border-color, var(--color-dark-stronger));
-  --input-widget-border-radius: var(--custom-input-widget-border-radius, 0);
-  --input-widget-placeholder-color: var(--custom-input-widget-placeholder-color, transparent);
+  --input-widget-border-style: solid;
+  --input-widget-border-style-stronger: solid;
+  --input-widget-border-color: var(--color-dark-stronger);
+  --input-widget-border-radius: 0;
+  --input-widget-placeholder-color: transparent;
 
   --default-modal-width: calc(100vw - var(--rhythm-1_5));
 
-  --resource-modal-width: var(--custom-resource-modal-width, var(--default-modal-width));
-  --resource-modal-width-md: var(--custom-resource-modal-width-md, 80vw);
-  --resource-modal-height: var(--custom-resource-modal-height, calc(100vh - var(--rhythm-16)));
-  --resource-modal-height-md: var(--custom-resource-modal-height-md, 85vh);
+  --resource-modal-width: var(--default-modal-width);
+  --resource-modal-width-md: 80vw;
+  --resource-modal-height: calc(100vh - var(--rhythm-16));
+  --resource-modal-height-md: 85vh;
 
   --search-bar-border: 1px solid var(--color-neutral-regular);
   --search-bar-border-focus: 1px solid var(--color-primary-regular);
-  --search-bar-border-radius: var(--custom-search-bar-border-radius, 0);
-  --search-bar-padding: var(--custom-search-bar-padding, var(--default-search-field-padding));
-  --search-bar-max-width: var(--custom-search-bar-max-width, var(--rhythm-56));
+  --search-bar-border-radius: 0;
+  --search-bar-padding: var(--default-search-field-padding);
+  --search-bar-max-width: var(--rhythm-56);
 
   color: var(--color-dark-stronger);
   font-family: var(--font-family-body);
