--- a/apps/dashboard/src/app/components/navbar/navbar.component.html
+++ b/apps/dashboard/src/app/components/navbar/navbar.component.html
@@ -12,7 +12,9 @@
             class="nav-link"
             routerLinkActive="active"
             [routerLinkActiveOptions]="{ exact: true }">
-            <pa-icon name="home"></pa-icon>
+            <pa-icon
+              [size]="smallNavbar ? 'small' : 'medium'"
+              name="home"></pa-icon>
             <span class="nav-link-title">{{ 'stash.home' | translate }}</span>
           </a>
         </div>
@@ -21,14 +23,18 @@
             class="nav-link"
             [class.disabled]="!(isAdminOrContrib | async)"
             (click)="createNewLink()">
-            <pa-icon name="link"></pa-icon>
+            <pa-icon
+              [size]="smallNavbar ? 'small' : 'medium'"
+              name="link"></pa-icon>
             <span class="nav-link-title">{{ 'stash.side.link' | translate }}</span>
           </a>
           <a
             class="nav-link"
             [class.disabled]="!(isAdminOrContrib | async)"
             (click)="uploadNewFiles(false)">
-            <pa-icon name="file"></pa-icon>
+            <pa-icon
+              [size]="smallNavbar ? 'small' : 'medium'"
+              name="file"></pa-icon>
             <span class="nav-link-title">{{ 'stash.side.file' | translate }}</span>
           </a>
           <a
@@ -36,7 +42,9 @@
             class="nav-link"
             [class.disabled]="!(isAdminOrContrib | async)"
             (click)="uploadNewFiles(true)">
-            <pa-icon name="folder"></pa-icon>
+            <pa-icon
+              [size]="smallNavbar ? 'small' : 'medium'"
+              name="folder"></pa-icon>
             <span class="nav-link-title">{{ 'stash.side.folder' | translate }}</span>
           </a>
         </div>
@@ -49,14 +57,18 @@
             routerLinkActive="active"
             class="nav-link"
             [class.disabled]="!(isAdminOrContrib | async)">
-            <pa-icon name="activity-log"></pa-icon>
+            <pa-icon
+              [size]="smallNavbar ? 'small' : 'medium'"
+              name="activity-log"></pa-icon>
             <span class="nav-link-title">{{ 'stash.side.activity' | translate }}</span>
           </a>
           <a
             [routerLink]="kbUrl + '/resources'"
             routerLinkActive="active"
             class="nav-link">
-            <pa-icon name="list"></pa-icon>
+            <pa-icon
+              [size]="smallNavbar ? 'small' : 'medium'"
+              name="list"></pa-icon>
             <span class="nav-link-title">{{ 'stash.side.list' | translate }}</span>
           </a>
           <a
@@ -64,7 +76,9 @@
             [routerLink]="kbUrl + '/ontologies'"
             routerLinkActive="active"
             class="nav-link">
-            <pa-icon name="label"></pa-icon>
+            <pa-icon
+              [size]="smallNavbar ? 'small' : 'medium'"
+              name="label"></pa-icon>
             <span class="nav-link-title">{{ 'resource.classification' | translate }}</span>
           </a>
           <a
@@ -72,7 +86,9 @@
             [routerLink]="[kbUrl + '/entities']"
             routerLinkActive="active"
             class="nav-link">
-            <pa-icon name="search-plus"></pa-icon>
+            <pa-icon
+              [size]="smallNavbar ? 'small' : 'medium'"
+              name="search-plus"></pa-icon>
             <span class="nav-link-title">{{ 'generic.insights' | translate }}</span>
           </a>
         </div>
@@ -85,7 +101,9 @@
             routerLinkActive="active"
             class="nav-link"
             [class.disabled]="!(isAdminOrContrib | async)">
-            <pa-icon name="settings"></pa-icon>
+            <pa-icon
+              [size]="smallNavbar ? 'small' : 'medium'"
+              name="settings"></pa-icon>
             <span class="nav-link-title">{{ 'stash.side.settings' | translate }}</span>
           </a>
         </div>
@@ -97,7 +115,9 @@
             routerLinkActive="active"
             class="nav-link"
             [class.disabled]="!(isAdminOrContrib | async)">
-            <pa-icon name="submenu"></pa-icon>
+            <pa-icon
+              [size]="smallNavbar ? 'small' : 'medium'"
+              name="submenu"></pa-icon>
             <span class="nav-link-title">{{ 'stash.side.trainings' | translate }}</span>
           </a>
         </div>
@@ -109,7 +129,9 @@
               [routerLink]="kbUrl + '/users'"
               routerLinkActive="active"
               class="nav-link">
-              <pa-icon name="users"></pa-icon>
+              <pa-icon
+                [size]="smallNavbar ? 'small' : 'medium'"
+                name="users"></pa-icon>
               <span class="nav-link-title">{{ 'stash.side.users' | translate }}</span>
             </a>
           </div>
@@ -122,7 +144,9 @@
             routerLinkActive="active"
             class="nav-link"
             [class.disabled]="!(isAdminOrContrib | async)">
-            <pa-icon name="widget"></pa-icon>
+            <pa-icon
+              [size]="smallNavbar ? 'small' : 'medium'"
+              name="widget"></pa-icon>
             <span class="nav-link-title">{{ 'stash.side.widgets' | translate }}</span>
           </a>
         </div>
@@ -134,7 +158,9 @@
               [routerLink]="kbUrl + '/keys'"
               routerLinkActive="active"
               class="nav-link">
-              <pa-icon name="lock-off"></pa-icon>
+              <pa-icon
+                [size]="smallNavbar ? 'small' : 'medium'"
+                name="lock-off"></pa-icon>
               <span class="nav-link-title">{{ 'stash.side.api_keys' | translate }}</span>
             </a>
           </div>
@@ -147,7 +173,9 @@
             class="nav-link"
             routerLinkActive="active"
             [class.disabled]="!(isAccountManager | async)">
-            <pa-icon name="account"></pa-icon>
+            <pa-icon
+              [size]="smallNavbar ? 'small' : 'medium'"
+              name="account"></pa-icon>
             <span class="nav-link-title">{{ 'account.manage' | translate }}</span>
           </a>
         </div>
@@ -162,7 +190,9 @@
             [routerLink]="(accountUrl | async) + '/home'"
             routerLinkActive="active"
             class="nav-link">
-            <pa-icon name="home"></pa-icon>
+            <pa-icon
+              [size]="smallNavbar ? 'small' : 'medium'"
+              name="home"></pa-icon>
             <span class="nav-link-title">{{ 'account.home' | translate }}</span>
           </a>
         </div>
@@ -171,7 +201,9 @@
             [routerLink]="(accountUrl | async) + '/settings'"
             routerLinkActive="active"
             class="nav-link">
-            <pa-icon name="settings"></pa-icon>
+            <pa-icon
+              [size]="smallNavbar ? 'small' : 'medium'"
+              name="settings"></pa-icon>
             <span class="nav-link-title">{{ 'account.settings' | translate }}</span>
           </a>
         </div>
@@ -180,7 +212,9 @@
             [routerLink]="(accountUrl | async) + '/kbs'"
             routerLinkActive="active"
             class="nav-link">
-            <pa-icon name="knowledge-box"></pa-icon>
+            <pa-icon
+              [size]="smallNavbar ? 'small' : 'medium'"
+              name="knowledge-box"></pa-icon>
             <span class="nav-link-title">{{ 'account.knowledgeboxes' | translate }}</span>
           </a>
         </div>
@@ -189,7 +223,9 @@
             [routerLink]="(accountUrl | async) + '/users'"
             routerLinkActive="active"
             class="nav-link">
-            <pa-icon name="users"></pa-icon>
+            <pa-icon
+              [size]="smallNavbar ? 'small' : 'medium'"
+              name="users"></pa-icon>
             <span class="nav-link-title">{{ 'account.users' | translate }}</span>
           </a>
         </div>
@@ -198,7 +234,9 @@
             [routerLink]="(accountUrl | async) + '/nua'"
             routerLinkActive="active"
             class="nav-link">
-            <pa-icon name="key"></pa-icon>
+            <pa-icon
+              [size]="smallNavbar ? 'small' : 'medium'"
+              name="key"></pa-icon>
             <span class="nav-link-title">{{ 'account.nua_keys' | translate }}</span>
           </a>
         </div>
@@ -209,7 +247,9 @@
             [routerLink]="(accountUrl | async) + '/billing'"
             routerLinkActive="active"
             class="nav-link">
-            <pa-icon name="payment"></pa-icon>
+            <pa-icon
+              [size]="smallNavbar ? 'small' : 'medium'"
+              name="payment"></pa-icon>
             <span class="nav-link-title">{{ 'account.billing' | translate }}</span>
           </a>
         </div>
@@ -221,7 +261,9 @@
           <a
             [routerLink]="kbUrl"
             class="nav-link">
-            <pa-icon name="chevron-left"></pa-icon>
+            <pa-icon
+              [size]="smallNavbar ? 'small' : 'medium'"
+              name="chevron-left"></pa-icon>
             <span class="nav-link-title">{{ 'generic.back' | translate }}</span>
           </a>
         </div>
