Widget generator refactoring: we cannot store the widgets anymore
  - Remove widgets endpoints from the SDK
  - New route for widget: /widget-generator
  - Update widget page: no more side panel

--- a/apps/dashboard/src/app/components/navbar/navbar.component.html
+++ b/apps/dashboard/src/app/components/navbar/navbar.component.html
@@ -118,7 +118,7 @@
           *ngIf="isWidgetsEnabled | async"
           class="group-items">
           <a
-            [routerLink]="kbUrl + '/widgets'"
+            [routerLink]="kbUrl + '/widget-generator'"
             routerLinkActive="active"
             class="nav-link"
             [class.disabled]="!(isAdminOrContrib | async)">
