Mix fulltext and semantic results

--- a/libs/search-widget/src/common/paragraph-result/ParagraphResult.scss
+++ b/libs/search-widget/src/common/paragraph-result/ParagraphResult.scss
@@ -25,6 +25,9 @@
   .paragraph-text {
     overflow-wrap: break-word;
   }
+  .paragraph-text.semantic {
+    font-weight: var(--font-weight-semi-bold);
+  }
 
   .indicator-container {
     display: flex;
