--- a/libs/search-widget/src/old-components/row/Row.scss
+++ b/libs/search-widget/src/old-components/row/Row.scss
@@ -109,4 +109,8 @@
     left: -32px;
     border-left: 2px solid var(--color-primary-regular);
   }
+
+  .paragraph.semantic {
+    font-weight: var(--font-weight-semi-bold);
+  }
 }
