--- a/apps/dashboard/src/app/components/navbar/navbar.component.scss
+++ b/apps/dashboard/src/app/components/navbar/navbar.component.scss
@@ -80,8 +80,7 @@ $height-breakpoint: 856px;
 
           .nav-link-title {
             display: flex;
-            font-size: font-size(xs);
-            padding: 0 rhythm(1) 0 rhythm(1.5);
+            font-size: font-size(s);
           }
         }
       }
